# ROS_sixi

joint_states_listener/: CMakeLists.txt  package.xml
joint_states_listener/scripts/: joint_pos_server.py
joint_states_listener/src/: listener_client.cpp
sixi_robot/: CMakeLists.txt  package.xml
sixi_robot/config/: joint_state_controller.yaml  trajectory_controller.yaml
sixi_robot/include/sixi_teleop_joy/: sixi_teleop_competition.h  sixi_teleop_joy.h
sixi_robot/launch/: display_rviz.launch  gazebo.launch  joint_state_controller.launch  joy_test.launch  rosserial_test.launch  sixi_GazeboSimulationWithXboxController.launch  sixi_RealWithXboxController.launch  sixi_competition.launch  sixi_world.launch
sixi_robot/msg/: CmdControl.msg  CmdPosJoints.msg  CmdWeb.msg
sixi_robot/rviz/: urdf.rviz
sixi_robot/scripts/: controller_analysis.py  hardware_interface.py  inverse_kinematic.py
sixi_robot/src/: simple_trajectory.cpp  sixi_teleop_competition.cpp  sixi_teleop_joy.cpp  subscrisber_test.cpp  trajectory_controller.cpp
sixi_robot/urdf/: sixi_robot.urdf  sixi_robot_without_motor.urdf
sixi_robot/worlds/: sixi.world
